fix menu page and product detail

--- a/fontend/includes/menuPage.html
+++ b/fontend/includes/menuPage.html
@@ -21,45 +21,46 @@
 <body>
     <nav class="navbar navbar-expand-lg bg-body-tertiary">
         <div class="container-fluid">
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown"
-                aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+                data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
+                aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
-            <div class="collapse navbar-collapse" id="navbarNavDropdown">
-                <ul class="navbar-nav">
+            <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                     <li class="nav-item">
                         <a class="nav-link active" aria-current="page" href="#">Home</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Sữa chửa bảo hành</a>
+                        <a class="nav-link" href="#">Payment</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Dịch Vụ</a>
-                    </li>
+                        <a class="nav-link" href="#">Purchase History</a>
+                    </li>  
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Trả góp</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#">Tin Tức</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#">Khuyến Mãi</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#">Ưu Đãi Thành Viên</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#">Trả góp</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#">Thu cũ đổi mới</a>
+                        <a class="nav-link" href="#">Product Detail</a>
+                    </li>  
+                    <li class="nav-item dropdown">
+                        <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
+                            aria-expanded="false">
+                            See More
+                        </a>
+                        <ul class="dropdown-menu">
+                            <li><a class="dropdown-item" href="#">Categories</a></li>
+                            <li><a class="dropdown-item" href="#">Filter/Sort</a></li>
+                        </ul>
                     </li>
                 </ul>
+                <form class="d-flex" role="search">
+                    <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
+                    <button class="btn btn-outline-success" type="submit">Search</button>
+                    
+                </form>
+                <button class="login-btton" type="button">
+                    Đăng nhập
+                </button>
             </div>
         </div>
-        <button class="login-btton" type="button">
-            Đăng nhập
-        </button>
     </nav>
 
 
