--- a/fontend/includes/css/menu.css
+++ b/fontend/includes/css/menu.css
@@ -7,11 +7,20 @@
 }
 nav div li.nav-item :hover {
   background-color: #f8f8f8;
-  color: #ff9671;
+  color: #FF748B;
 }
 nav.navbar {
   box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.5);
 }
+.btn.btn-outline-success{
+  color: #FF748B;
+  border-color: #FF748B;
+}
+.btn.btn-outline-success:hover{
+  color: #f8f8f8;
+  background-color: #FF748B;
+}
+
 
 .login-btton {
   background-color: #b0a8b9;
@@ -27,7 +36,7 @@ nav.navbar {
 }
 
 .login-btton:hover {
-  background-color: #ff9671;
+  background-color: #FF748B;
   color: #333333;
   transition: 0.2s
 }
