--- a/fontend/includes/header.html
+++ b/fontend/includes/header.html
@@ -27,7 +27,7 @@
           <div class="layout-header">
             <div class="row-logo">
               <a href="#" class="logo"
-                ><img src="../img/N7.png" alt="header-logo"
+                ><img src="../images/N7.png" alt="header-logo"
               /></a>
             </div>
             <div class="row-search">
