--- a/Views/Home/Register.cshtml
+++ b/Views/Home/Register.cshtml
@@ -15,6 +15,7 @@
 </head>
 
 <body>
+    <a href="@Url.Action("Index", "Home")"> <- Quay lại trang Home</a>
     <div class="d-flex justify-content-center align-items-center min-vh-100 bg-light">
         <div class="auth-container shadow-lg rounded p-4 p-sm-5 bg-white">
             <h2 class="auth-title text-center mb-4 text-primary">Đăng Ký</h2>
