--- a/wwwroot/css/products.css
+++ b/wwwroot/css/products.css
@@ -56,3 +56,21 @@
         grid-template-columns: repeat(1, 1fr); /* 1 cột trên màn hình nhỏ */
     }
 }
+.pagination {
+    justify-content: center;
+    margin-top: 20px;
+}
+
+.page-item {
+    margin: 0 5px;
+}
+
+.page-link {
+    color: #007bff;
+    border-radius: 5px;
+}
+
+    .page-link:hover {
+        background-color: #007bff;
+        color: #fff;
+    }
