--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -48,7 +48,7 @@
                     </div>
              
                     <a href="@Url.Action("Cart", "Cart")" class="text-white fs-4 px-2"><i class="bi bi-basket"></i></a>
-                    <a href="#" class="text-white fs-4 px-2"><i class="bi bi-person-circle"></i></a>
+                    <a asp-action="Profile" asp-controller="Home" class="nav-link text-white fs-4 px-2"><i class="bi bi-person-circle"></i></a>
                     
                     <!-- Add Login and Register links here -->
                     <a href="@Url.Action("Login", "Home")" class="text-black px-2" style="text-decoration:none;">Đăng nhập</a>/
