--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -263,8 +263,7 @@
                           title="Apple iPhone 15 Pro Max 512GB VN/A"
                         >
                           <picture>
-                            <img
-                              src="images/cty-apple-iphone-15-pro-max-512gb.jpg"
+                            <img src="https://stcv4.hnammobile.com/uploads/products/colors/4/apple-iphone-15-pro-max-512gb-vn-a-01695963124.jpg"
                               width="125"
                               height="150"
                               alt="Apple iPhone 15 Pro Max 512GB VN/A"
@@ -425,8 +424,7 @@
                           title="Apple iPhone 16 Pro Max 256GB LL/A"
                         >
                           <picture>
-                            <img
-                              src="images/hnam-apple-iphone-16-pro-max-256gb.jpg"
+                            <img src="https://stcv4.hnammobile.com/uploads/products/colors/6/apple-iphone-16-pro-max-512gb-ll-a-01726631158.jpg"
                               width="125"
                               height="150"
                               alt="Apple iPhone 16 Pro Max 256GB LL/A"
@@ -479,8 +477,7 @@
                           title="Apple iPhone 16 Pro Max 512GB LL/A"
                         >
                           <picture>
-                            <img
-                              src="images/hnam-apple-iphone-16-pro-max-512gb.jpg"
+                            <img src="https://stcv4.hnammobile.com/uploads/products/colors/6/apple-iphone-16-pro-max-512gb-ll-a-01726631158.jpg"
                               width="125"
                               height="150"
                               alt="Apple iPhone 16 Pro Max 512GB LL/A"
@@ -533,8 +530,7 @@
                           title="Apple iPhone 15 Pro Max 256GB LL/A"
                         >
                           <picture>
-                            <img
-                              src="images/hnam-apple-iphone-15-pro-max-256gb.jpg"
+                            <img src="https://stcv4.hnammobile.com/uploads/products/colors/8/apple-iphone-15-128gb-vn-a-01695950149.jpg"
                               width="125"
                               height="150"
                               alt="Apple iPhone 15 Pro Max 256GB LL/A"
@@ -587,8 +583,7 @@
                           title="Apple iPhone 15 Pro Max 512GB LL/A"
                         >
                           <picture>
-                            <img
-                              src="images/hnam-apple-iphone-15-pro-max-512gb.jpg"
+                            <img src="https://stcv4.hnammobile.com/uploads/products/colors/8/apple-iphone-15-128gb-vn-a-01695950149.jpg"
                               width="125"
                               height="150"
                               alt="Apple iPhone 15 Pro Max 512GB LL/A"
@@ -641,8 +636,7 @@
                           title="Apple iPhone 15 Pro Max 256GB VN/A"
                         >
                           <picture>
-                            <img
-                              src="images/hnam-apple-iphone-15-pro-max-256gb.jpg"
+                            <img src="https://stcv4.hnammobile.com/uploads/products/colors/8/apple-iphone-15-128gb-vn-a-01695950149.jpg"
                               width="125"
                               height="150"
                               alt="Apple iPhone 15 Pro Max 256GB VN/A"
@@ -695,8 +689,7 @@
                           title="Apple iPhone 15 Pro Max 512GB VN/A"
                         >
                           <picture>
-                            <img
-                              src="images/cty-apple-iphone-15-pro-max-512gb.jpg"
+                            <img src="https://stcv4.hnammobile.com/uploads/products/colors/4/apple-iphone-15-pro-max-512gb-ll-a-01695717498.jpg"
                               width="125"
                               height="150"
                               alt="Apple iPhone 15 Pro Max 512GB VN/A"
@@ -857,8 +850,7 @@
                           title="Apple iPhone 16 Pro Max 256GB LL/A"
                         >
                           <picture>
-                            <img
-                              src="images/hnam-apple-iphone-16-pro-max-256gb.jpg"
+                            <img src="https://stcv4.hnammobile.com/uploads/products/colors/4/apple-iphone-15-pro-max-512gb-ll-a-01695717498.jpg"
                               width="125"
                               height="150"
                               alt="Apple iPhone 16 Pro Max 256GB LL/A"
@@ -911,8 +903,7 @@
                           title="Apple iPhone 16 Pro Max 512GB LL/A"
                         >
                           <picture>
-                            <img
-                              src="images/hnam-apple-iphone-16-pro-max-512gb.jpg"
+                            <img src="https://stcv4.hnammobile.com/uploads/products/colors/4/apple-iphone-15-pro-max-512gb-ll-a-01695717498.jpg"
                               width="125"
                               height="150"
                               alt="Apple iPhone 16 Pro Max 512GB LL/A"
@@ -965,8 +956,7 @@
                           title="Apple iPhone 15 Pro Max 256GB LL/A"
                         >
                           <picture>
-                            <img
-                              src="images/hnam-apple-iphone-15-pro-max-256gb.jpg"
+                            <img src="https://stcv4.hnammobile.com/uploads/products/colors/0/apple-iphone-15-plus-256gb-vn-a-01696235184.jpg"
                               width="125"
                               height="150"
                               alt="Apple iPhone 15 Pro Max 256GB LL/A"
@@ -1019,8 +1009,7 @@
                           title="Apple iPhone 15 Pro Max 512GB LL/A"
                         >
                           <picture>
-                            <img
-                              src="images/hnam-apple-iphone-15-pro-max-512gb.jpg"
+                            <img src="https://stcv4.hnammobile.com/uploads/products/colors/0/apple-iphone-15-plus-256gb-vn-a-01696235184.jpg"
                               width="125"
                               height="150"
                               alt="Apple iPhone 15 Pro Max 512GB LL/A"
@@ -1130,8 +1119,7 @@
                           title="Samsung Galaxy A16 5G A166 128GB Ram 8GB Chính Hãng"
                         >
                           <picture>
-                            <img
-                              src="images/cty-samsung-galaxy-a16-5g-a166-128gb-ram-8gb-chinh-hang.jpg"
+                            <img src="https://stcv4.hnammobile.com/uploads/products/colors/2/samsung-galaxy-a16-5g-a166-128gb-ram-8gb-chinh-hang-01730705816.jpg"
                               width="125"
                               height="150"
                               alt="Samsung Galaxy A16 5G A166 128GB Ram 8GB Chính Hãng"
@@ -1184,8 +1172,7 @@
                           title="Samsung Galaxy A06 A065F 128GB Ram 4GB Chính Hãng"
                         >
                           <picture>
-                            <img
-                              src="images/cty-samsung-galaxy-a06-a065f-128gb-ram-4gb-chinh-hang.jpg"
+                            <img src="https://stcv4.hnammobile.com/uploads/products/colors/7/samsung-galaxy-a06-a065f-128gb-ram-4gb-chinh-hang-101726114404.jpg"
                               width="125"
                               height="150"
                               alt="Samsung Galaxy A06 A065F 128GB Ram 4GB Chính Hãng"
@@ -1238,8 +1225,7 @@
                           title="Samsung Galaxy A05s A057 128GB Ram 4GB Chính Hãng"
                         >
                           <picture>
-                            <img
-                              src="images/cty-samsung-galaxy-a05s-a057-128gb-ram-4gb.jpg"
+                            <img src="https://stcv4.hnammobile.com/uploads/products/colors/3/samsung-galaxy-a05s-a057-128gb-ram-4gb-01695089483.jpg"
                               width="125"
                               height="150"
                               alt="Samsung Galaxy A05s A057 128GB Ram 4GB Chính Hãng"
@@ -1299,8 +1285,7 @@
                           title="Samsung Galaxy Z Fold6 5G F956 256GB Ram 12GB Chính Hãng"
                         >
                           <picture>
-                            <img
-                              src="images/cty-samsung-galaxy-z-fold6-5g-f956-256gb-ram-12gb-chinh-hang.jpg"
+                            <img src="https://stcv4.hnammobile.com/uploads/products/colors/1/samsung-galaxy-z-fold6-5g-f956-256gb-ram-12gb-chinh-hang-01720620413.jpg"
                               width="125"
                               height="150"
                               alt="Samsung Galaxy Z Fold6 5G F956 256GB Ram 12GB Chính Hãng"
@@ -1354,8 +1339,7 @@
                           title="Samsung Galaxy Z Fold6 5G F956 512GB Ram 12GB Chính Hãng"
                         >
                           <picture>
-                            <img
-                              src="images/cty-samsung-galaxy-z-fold6-5g-f956-512gb-ram-12gb-chinh-hang.jpg"
+                            <img src="https://stcv4.hnammobile.com/uploads/products/colors/1/samsung-galaxy-z-fold6-5g-f956-256gb-ram-12gb-chinh-hang-01720620413.jpg"
                               width="125"
                               height="150"
                               alt="Samsung Galaxy Z Fold6 5G F956 512GB Ram 12GB Chính Hãng"
@@ -1409,8 +1393,7 @@
                           title="Samsung Galaxy Z Flip6 5G F741 256GB Ram 12GB Chính Hãng"
                         >
                           <picture>
-                            <img
-                              src="images/cty-samsung-galaxy-z-flip6-5g-f741-256gb-ram-12gb-chinh-hang.jpg"
+                            <img src="https://stcv4.hnammobile.com/uploads/products/colors/4/samsung-galaxy-z-flip6-5g-f741-256gb-ram-12gb-chinh-hang-101720620678.jpg"
                               width="125"
                               height="150"
                               alt="Samsung Galaxy Z Flip6 5G F741 256GB Ram 12GB Chính Hãng"
@@ -1464,8 +1447,7 @@
                           title="Samsung Galaxy S23 Ultra 5G S918 512GB Ram 12GB Chính Hãng (đã active)"
                         >
                           <picture>
-                            <img
-                              src="images/cty-samsung-galaxy-s23-ultra-5g-s918-512gb-ram-12gb.jpg"
+                            <img src="https://stcv4.hnammobile.com/uploads/products/colors/3/samsung-galaxy-s23-ultra-5g-s918-512gb-ram-12gb-01675324085.jpg"
                               width="125"
                               height="150"
                               alt="Samsung Galaxy S23 Ultra 5G S918 512GB Ram 12GB Chính Hãng (đã active)"
@@ -1519,8 +1501,7 @@
                           title="Samsung Galaxy A16 5G A166 128GB Ram 8GB Chính Hãng"
                         >
                           <picture>
-                            <img
-                              src="images/cty-samsung-galaxy-a16-5g-a166-128gb-ram-8gb-chinh-hang.jpg"
+                            <img src="https://stcv4.hnammobile.com/uploads/products/colors/2/samsung-galaxy-a16-5g-a166-128gb-ram-8gb-chinh-hang-01730705816.jpg"
                               width="125"
                               height="150"
                               alt="Samsung Galaxy A16 5G A166 128GB Ram 8GB Chính Hãng"
@@ -1573,8 +1554,7 @@
                           title="Samsung Galaxy A06 A065F 128GB Ram 4GB Chính Hãng"
                         >
                           <picture>
-                            <img
-                              src="images/cty-samsung-galaxy-a06-a065f-128gb-ram-4gb-chinh-hang.jpg"
+                            <img src="https://stcv4.hnammobile.com/uploads/products/colors/2/samsung-galaxy-a16-5g-a166-128gb-ram-8gb-chinh-hang-01730705816.jpg"
                               width="125"
                               height="150"
                               alt="Samsung Galaxy A06 A065F 128GB Ram 4GB Chính Hãng"
@@ -1627,8 +1607,7 @@
                           title="Samsung Galaxy A05s A057 128GB Ram 4GB Chính Hãng"
                         >
                           <picture>
-                            <img
-                              src="images/cty-samsung-galaxy-a05s-a057-128gb-ram-4gb.jpg"
+                                                <img src="https://stcv4.hnammobile.com/uploads/products/colors/3/samsung-galaxy-s23-ultra-5g-s918-512gb-ram-12gb-01675324085.jpg"
                               width="125"
                               height="150"
                               alt="Samsung Galaxy A05s A057 128GB Ram 4GB Chính Hãng"
@@ -1688,8 +1667,7 @@
                           title="Samsung Galaxy Z Fold6 5G F956 256GB Ram 12GB Chính Hãng"
                         >
                           <picture>
-                            <img
-                              src="images/cty-samsung-galaxy-z-fold6-5g-f956-256gb-ram-12gb-chinh-hang.jpg"
+                            <img src="https://stcv4.hnammobile.com/uploads/products/colors/1/samsung-galaxy-z-fold6-5g-f956-256gb-ram-12gb-chinh-hang-101720620413.jpg"
                               width="125"
                               height="150"
                               alt="Samsung Galaxy Z Fold6 5G F956 256GB Ram 12GB Chính Hãng"
@@ -1743,8 +1721,7 @@
                           title="Samsung Galaxy Z Fold6 5G F956 512GB Ram 12GB Chính Hãng"
                         >
                           <picture>
-                            <img
-                              src="images/cty-samsung-galaxy-z-fold6-5g-f956-512gb-ram-12gb-chinh-hang.jpg"
+                            <img src="https://stcv4.hnammobile.com/uploads/products/colors/1/samsung-galaxy-z-fold6-5g-f956-256gb-ram-12gb-chinh-hang-101720620413.jpg"
                               width="125"
                               height="150"
                               alt="Samsung Galaxy Z Fold6 5G F956 512GB Ram 12GB Chính Hãng"
@@ -1798,8 +1775,7 @@
                           title="Samsung Galaxy Z Flip6 5G F741 256GB Ram 12GB Chính Hãng"
                         >
                           <picture>
-                            <img
-                              src="images/cty-samsung-galaxy-z-flip6-5g-f741-256gb-ram-12gb-chinh-hang.jpg"
+                            <img src="https://stcv4.hnammobile.com/uploads/products/colors/1/samsung-galaxy-z-fold6-5g-f956-256gb-ram-12gb-chinh-hang-101720620413.jpg"
                               width="125"
                               height="150"
                               alt="Samsung Galaxy Z Flip6 5G F741 256GB Ram 12GB Chính Hãng"
@@ -1853,8 +1829,7 @@
                           title="Samsung Galaxy S23 Ultra 5G S918 512GB Ram 12GB Chính Hãng (đã active)"
                         >
                           <picture>
-                            <img
-                              src="images/cty-samsung-galaxy-s23-ultra-5g-s918-512gb-ram-12gb.jpg"
+                            <img src="https://stcv4.hnammobile.com/uploads/products/colors/3/samsung-galaxy-s23-ultra-5g-s918-512gb-ram-12gb-01675324085.jpg"
                               width="125"
                               height="150"
                               alt="Samsung Galaxy S23 Ultra 5G S918 512GB Ram 12GB Chính Hãng (đã active)"
