--- a/Views/Ordered/Ordered.cshtml
+++ b/Views/Ordered/Ordered.cshtml
@@ -19,65 +19,31 @@
             </tr>
         </thead>
         <tbody>
-            <!-- Đơn hàng 1 -->
-            <tr>
-                <td scope="row">1</td>
-                <td><img src="https://images.samsung.com/is/image/samsung/p6pim/vn/sm-m556blgdxxv/gallery/vn-galaxy-m55-5g-sm-m556-sm-m556blgdxxv-thumb-541204554?$252_252_PNG$ " alt="Samsung Galaxy M35" class="w-25"></td>
-                <td>Điện thoại Samsung Galaxy M35</td>
-                <td>2024-12-01</td>
-                <td>1</td>
-                <td>7,999,000 VNĐ</td>
-                <td><span class="badge bg-success">Đã giao</span></td>
-                <td>7,999,000 VNĐ</td>
-            </tr>
-            <!-- Đơn hàng 2 -->
-            <tr>
-                <td scope="row">2</td>
-                <td><img src="https://images.samsung.com/is/image/samsung/p6pim/vn/sm-m556blgdxxv/gallery/vn-galaxy-m55-5g-sm-m556-sm-m556blgdxxv-thumb-541204554?$252_252_PNG$ " alt="Samsung Galaxy M35" class="w-25"></td>
-                <td>Điện thoại Samsung Galaxy M35</td>
-                <td>2024-12-01</td>
-                <td>1</td>
-                <td>7,999,000 VNĐ</td>
-                <td><span class="badge bg-success">Đã giao</span></td>
-                <td>7,999,000 VNĐ</td>
-            </tr>
-            <!-- Đơn hàng 3 -->
-            <tr>
-                <td scope="row">3</td>
-                <td><img src="https://images.samsung.com/is/image/samsung/p6pim/vn/sm-m556blgdxxv/gallery/vn-galaxy-m55-5g-sm-m556-sm-m556blgdxxv-thumb-541204554?$252_252_PNG$ " alt="Samsung Galaxy M35" class="w-25"></td>
-                <td>Điện thoại Samsung Galaxy M35</td>
-                <td>2024-12-01</td>
-                <td>1</td>
-                <td>7,999,000 VNĐ</td>
-                <td><span class="badge bg-success">Đã giao</span></td>
-                <td>7,999,000 VNĐ</td>
-            </tr>
-            <!-- Đơn hàng 3 -->
-            <tr>
-                <td scope="row">3</td>
-                <td><img src="https://images.samsung.com/is/image/samsung/p6pim/vn/sm-m556blgdxxv/gallery/vn-galaxy-m55-5g-sm-m556-sm-m556blgdxxv-thumb-541204554?$252_252_PNG$ " alt="Samsung Galaxy M35" class="w-25"></td>
-                <td>Điện thoại Samsung Galaxy M35</td>
-                <td>2024-12-01</td>
-                <td>1</td>
-                <td>7,999,000 VNĐ</td>
-                <td><span class="badge bg-success">Đã giao</span></td>
-                <td>7,999,000 VNĐ</td>
-            </tr>
-            <!-- Đơn hàng 3 -->
-            <tr>
-                <td scope="row">3</td>
-                <td><img src="https://images.samsung.com/is/image/samsung/p6pim/vn/sm-m556blgdxxv/gallery/vn-galaxy-m55-5g-sm-m556-sm-m556blgdxxv-thumb-541204554?$252_252_PNG$ " alt="Samsung Galaxy M35" class="w-25"></td>
-                <td>Điện thoại Samsung Galaxy M35</td>
-                <td>2024-12-01</td>
-                <td>1</td>
-                <td>7,999,000 VNĐ</td>
-                <td><span class="badge bg-success">Đã giao</span></td>
-                <td>7,999,000 VNĐ</td>
-            </tr>
+            @foreach (var order in Model)
+            {
+                @foreach (var item in order.OrderItems)
+                {
+                    <tr>
+                        <td scope="row">@order.OrderId</td>
+                        <td><img src="@item.ProductImgUrl" alt="@item.ProductName" class="w-25"></td>
+                        <td>@item.ProductName</td>
+                        <td>@order.OrderDate.ToString("yyyy-MM-dd")</td>
+                        <td>@item.Quantity</td>
+                        <td>@string.Format("{0:N0}", item.Price) VNĐ</td>  <!-- Chia hàng nghìn với định dạng -->
+                        <td>
+                            @if (order.Status == "Đã giao")
+                            {
+                                <span class="badge bg-success">Đã giao</span>
+                            }
+                            else
+                            {
+                                <span class="badge bg-warning">@order.Status</span>
+                            }
+                        </td>
+                        <td>@string.Format("{0:N0}", item.Quantity * item.Price) VNĐ</td>  <!-- Chia hàng nghìn cho tổng tiền -->
+                    </tr>
+                }
+            }
         </tbody>
     </table>
-    <!-- Total Order -->
-    <div class="total-order float-end" style="border: 1px solid black; padding: 10px;">
-        <span><strong>Tổng giá trị hàng: 23,997,000 VNĐ</strong></span>
-    </div>
 </div>
