--- a/Views/Home/Login.cshtml
+++ b/Views/Home/Login.cshtml
@@ -1,6 +1,11 @@
 ﻿@{
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
+@if (TempData["ErrorMessage"] != null)
+{
+    <div class="alert alert-danger">@TempData["ErrorMessage"]</div>
+}
+
 <!DOCTYPE html>
 <html lang="en">
 
